2012-10-04  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL] Add libxml 2.8.0 to jhbuild
        https://bugs.webkit.org/show_bug.cgi?id=98418

        Reviewed by Laszlo Gombos.

        Unskip fast/xsl/xslt-missing-namespace-in-xslt.xml
        since it passes with libxml 2.8.0 and we now depend
        on that version.

        * platform/efl/TestExpectations:

2012-10-04  Tony Chang  <tony@chromium.org>

        Unreviewed gardening.  Landing render tree results for css3/flexbox/flexbox-baseline.html.
        https://bugs.webkit.org/show_bug.cgi?id=98306

        This pixel test was added in r130405.

        * platform/chromium-mac-snowleopard/css3/flexbox/flexbox-baseline-expected.png: Added.
        * platform/chromium-mac/css3/flexbox/flexbox-baseline-expected.png: Added.
        * platform/chromium-mac/css3/flexbox/flexbox-baseline-expected.txt: Added.
        * platform/chromium-win/css3/flexbox/flexbox-baseline-expected.png: Added.
        * platform/chromium-win/css3/flexbox/flexbox-baseline-expected.txt: Copied from LayoutTests/platform/chromium-linux/css3/flexbox/flexbox-baseline-expected.txt.
        * platform/chromium/TestExpectations:
        * platform/gtk/TestExpectations:
        * platform/gtk/css3/flexbox/flexbox-baseline-expected.txt: Added.
        * platform/mac/TestExpectations:
        * platform/mac/css3/flexbox/flexbox-baseline-expected.txt: Added.
        * platform/qt/TestExpectations:
        * platform/qt/css3/flexbox/flexbox-baseline-expected.txt: Renamed from LayoutTests/platform/chromium-linux/css3/flexbox/flexbox-baseline-expected.txt.

2012-10-04  Alpha Lam  <hclam@chromium.org>

        Unreviewed. Chromium rebaselines.

        * platform/chromium-mac/fast/images/paint-subrect-grid-expected.png: Copied from LayoutTests/platform/chromium/fast/images/paint-subrect-grid-expected.png.