@@ -21,4 +21,4 @@ layer at (0,0) size 800x600
         RenderBlock {BLOCKQUOTE} at (0,72) size 784x18 [color=#0000FF] [border: none (2px solid #0000FF)]
           RenderText {#text} at (12,0) size 83x18
             text run at (12,0) width 83: "Hello World."
-caret: position 2 of child 0 {#text} of child 2 {DIV} of body
+caret: position 3 of child 0 {#text} of child 2 {DIV} of body
